hard-gists/5515619/run.log
=== Docker Run Log for 5515619 ===
Started at: Mi 29. Okt 15:43:55 CET 2025

[2025-10-29 15:43:55] START: Running container for 5515619
[2025-10-29 15:43:55] SUCCESS: Container b1aec2605d2d00a561d9c522bd8f8c26d113f533fd9fa998828705e179f571b0 started for 5515619
=== Container logs for 5515619 ===
  File "/snippet.py", line 142
    raise RuntimeError, "Function '%s' already registered" % (name,)
                      ^
SyntaxError: invalid syntax
=== End of logs for 5515619 ===
[2025-10-29 15:43:58] INFO: Container b1aec2605d2d00a561d9c522bd8f8c26d113f533fd9fa998828705e179f571b0 has stopped
